se realizan cambios post entrega

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -14,22 +14,22 @@
         <a href="index.html">
             <img class="logo" src="../images/lacruce.png" alt="">
         </a>
-        <nav class="nav">
-        <ul class="menunav">
-            <li class="menunav_item"><a href="../index.html" class="link">Inicio</a></li>
-            <li class="menunav_item"><a href="./reservas.html" class="link">Reservas</a></li>
-            <li class="menunav_item"><a href="./contacto.html" class="link">Contacto</a></li>
-            <li class="menunav_item"><a href="./galeria.html" class="link">Galeria</a></li>
-            <li class="menunav_item"><a href="./experiencias.html" class="link">Experiencias</a></li>
+        <ul class="nav">
+            <li class="nav_item"><a href="../index.html" class="nav_link">Inicio</a></li>
+            <li class="nav_item"><a href="reservas.html" class="nav_link">Reservas</a></li>
+            <li class="nav_item"><a href="contacto.html" class="nav_link">Contacto</a></li>
+            <li class="nav_item"><a href="galeria.html" class="nav_link">Galeria</a></li>
+            <li class="nav_item"><a href="experiencias.html" class="nav_link">Experiencias</a></li>
         </ul>
-        </nav>
     </header>
 
     <main>
         <img class="bannercontacto" src="../images/lacruuuu.jpg" alt="">
         <div class="whatsapp">
-            <a href="https://api.whatsapp.com/send?phone=+5492612190217"></a>
-            <img src="../images/whatsapp.png" class="img-fluid">
+            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+            <a href="https://api.whatsapp.com/send?phone=5195508107&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20Varela%202." class="float" target="_blank">
+            <i class="fa fa-whatsapp my-float"></i>
+            </a>
         </div>
     </main>
 
@@ -64,29 +64,27 @@
             </div>
         </div>
     </section>
-    <div class="ubicacion">
-        <h1>Ubicacion</h1>
-    </div>
+
     <section id="map">
         <div class="grupo-map">
-            <div class="box-map">
+            <h1 class="ubicacion">Ubicacion</h1>
                 <figure>
                     <a>
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d107071.16768785407!2d-69.17743635664061!3d-33.00446119999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x967de774fb671aab%3A0x459fe8262e5dab8d!2sLa%20Crucecita%20Horseback%20Riding!5e0!3m2!1ses!2sus!4v1686000599994!5m2!1ses!2sus" width="400" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d107071.16768785407!2d-69.17743635664061!3d-33.00446119999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x967de774fb671aab%3A0x459fe8262e5dab8d!2sLa%20Crucecita%20Horseback%20Riding!5e0!3m2!1ses!2sus!4v1686000599994!5m2!1ses!2sus" width="1200" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </a>
                 </figure>
-            </div>
-            <div class="grupo-map">
-                <div class="info">
-                    <h2 class="titulos">Información de contacto</h2>
+        </div>
+    </section>
+
+    <section id="contact">
+        <div class="info">
+                    <h2 class="">Información de contacto</h2>
                     <p><i class="fas fa-map-marker-alt"></i> Dirección: Calle Principal 123, Ciudad</p>
                     <p><i class="fas fa-mobile-alt"></i> Celular: +1 234 567 890</p>
                     <p><i class="fas fa-phone"></i> Teléfono: +1 987 654 321</p>
                     <p><i class="fas fa-envelope"></i> Email: ejemplo@example.com</p>
-                </div>
         </div>
     </section>
-
     <hr>
         <footer id="footer">
             <div class="grupo-1">
