--- a/index.html
+++ b/index.html
@@ -13,23 +13,22 @@
         <header id="encabezado">
             <a href="index.html">
                 <img class="logo" src="./images/lacruce.png" alt="">
-            </a>
-            <nav class="nav">
-            <ul class="menunav">
-                <li class="menunav_item"><a href="index.html" class="link">Inicio</a></li>
-                <li class="menunav_item"><a href="./pages/reservas.html" class="link">Reservas</a></li>
-                <li class="menunav_item"><a href="./pages/contacto.html" class="link">Contacto</a></li>
-                <li class="menunav_item"><a href="./pages/galeria.html" class="link">Galeria</a></li>
-                <li class="menunav_item"><a href="./pages/experiencias.html" class="link">Experiencias</a></li>
+            <ul class="nav">
+                <li class="nav_item"><a href="index.html" class="nav_link">Inicio</a></li>
+                <li class="nav_item"><a href="./pages/reservas.html" class="nav_link">Reservas</a></li>
+                <li class="nav_item"><a href="./pages/contacto.html" class="nav_link">Contacto</a></li>
+                <li class="nav_item"><a href="./pages/galeria.html" class="nav_link">Galeria</a></li>
+                <li class="nav_item"><a href="./pages/experiencias.html" class="nav_link">Experiencias</a></li>
             </ul>
-            </nav>
         </header>
 
         <main>
             <img class="bannerindex" src="./images/renderfrente.jpeg" alt="">
             <div class="whatsapp">
-                <a href="https://api.whatsapp.com/send?phone=+5492612190217"></a>
-                <img src="./images/whatsapp.png" class="img-fluid">
+                <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+                <a href="https://api.whatsapp.com/send?phone=5195508107&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20Varela%202." class="float" target="_blank">
+                <i class="fa fa-whatsapp my-float"></i>
+                </a>
             </div>
         </main>
 
