--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -10,18 +10,28 @@
     <script src="https://kit.fontawesome.com/c8a9350c8e.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header id="encabezado">
-        <a href="index.html">
-            <img class="logo" src="../images/lacruce.png" alt="">
-        </a>
-        <ul class="nav">
-            <li class="nav_item"><a href="../index.html" class="nav_link">Inicio</a></li>
-            <li class="nav_item"><a href="reservas.html" class="nav_link">Reservas</a></li>
-            <li class="nav_item"><a href="contacto.html" class="nav_link">Contacto</a></li>
-            <li class="nav_item"><a href="galeria.html" class="nav_link">Galeria</a></li>
-            <li class="nav_item"><a href="experiencias.html" class="nav_link">Experiencias</a></li>
-        </ul>
+    <header>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+                <a class="logo" href="../index.html">
+                    <img src="../images/lacruce.png" alt="logo">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item"><a href="../index.html" class="nav-link">INICIO</a></li>
+                        <li class="nav-item"><a href="reservas.html" class="nav-link">RESERVAS</a></li>
+                        <li class="nav-item"><a href="contacto.html" class="nav-link">CONTACTO</a></li>
+                        <li class="nav-item"><a href="galeria.html" class="nav-link">GALERIA</a></li>
+                        <li class="nav-item"><a href="experiencias.html" class="nav-link">EXPERIENCIAS</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </header>
+    
 
     <main>
         <img class="bannercontacto" src="../images/lacruuuu.jpg" alt="">
@@ -79,10 +89,10 @@
     <section id="contact">
         <div class="info">
                     <h2 class="">Información de contacto</h2>
-                    <p><i class="fas fa-map-marker-alt"></i> Dirección: Calle Principal 123, Ciudad</p>
+                    <p><i class="fas fa-map-marker-alt"></i> Dirección: Calle 2 y 7. La crucesita, M5549 Luján de Cuyo, Mendoza, Argentina</p>
                     <p><i class="fas fa-mobile-alt"></i> Celular: +1 234 567 890</p>
                     <p><i class="fas fa-phone"></i> Teléfono: +1 987 654 321</p>
-                    <p><i class="fas fa-envelope"></i> Email: ejemplo@example.com</p>
+                    <p><i class="fas fa-envelope"></i> Email: lacrucesita@info.com.a</p>
         </div>
     </section>
     <hr>
