se modifico el index

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <li class="nav-item"><a href="./pages/reservas.html" class="nav-link">RESERVAS</a></li>
                         <li class="nav-item"><a href="./pages/contacto.html" class="nav-link">CONTACTO</a></li>
                         <li class="nav-item"><a href="./pages/galeria.html" class="nav-link">GALERIA</a></li>
-                        <li class="nav-item"><a href="./pages/experiencias.html" class="nav-link">EXPERIENCIAS</a></li>
+                        <li class="nav-item"><a href="./pages/experiencias.html" class="nav-link">EXPERI</a></li>
                     </ul>
                 </div>
             </div>
