--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../Css/style.css">
     <script src="https://kit.fontawesome.com/c8a9350c8e.js" crossorigin="anonymous"></script>
     <title>Galeria</title>
+    <link rel="shortcut icon" href="../images/lacruce.png">
 </head>
 <body>
     <header>
