--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Inicio</title>
     <link rel="shortcut icon" href="./images/lacruce.png">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="./Css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <script src="https://kit.fontawesome.com/c8a9350c8e.js" crossorigin="anonymous"></script>
 </head>
 <body>
