--- a/pages/reservas.html
+++ b/pages/reservas.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reservas</title>
     <link rel="shortcut icon" href="../images/lacruce.png">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <link rel="stylesheet" href="../Css/style.css">
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/style.css">
     <script src="https://kit.fontawesome.com/c8a9350c8e.js" crossorigin="anonymous"></script>
 
 </head>
@@ -41,21 +41,49 @@
         </a>
     </div>
 
-<section id="book">
-    <div class="formulario">
-        <div class="text">
-            <h1> <span> Reserva</span> tu habitacion</h1>
-        </div>
-        <form class="grid">
-                <input type="date" placeholder="Dia de llegada">
-                <input type="date" placeholder=" Dia de salida">
-                <input type="number" placeholder=" Adultos">
-                <input type="number" placeholder=" Habitaciones">
-                <input type="submit" placeholder=" CHEQUEAR ">
-        </form>
-    </div>
-</section>
+    <section id="reserva">
+        <h1> Reserva tu habitacion</h1>
+        <div class="container availability-form">
+            <div class="row">
+                <div class="col-lg-12 bg-white shadow p-4 rounded">
+                    <form>
+                        <div class="row align-items-end">
+                            <div class="col-lg-3 mb-3">
+                                <label class="form-label" style="font-weight: 500;">Check-in</label>
+                                <input type="date" class="form-control shadow-none">
+                            </div>
+                            <div class="col-lg-3 mb-3">
+                                <label class="form-label" style="font-weight: 500;">Check-in</label>
+                                <input type="date" class="form-control shadow-none">
+                            </div>
+                            <div class="col-lg-3 mb-3">
+                                <label class="form-label" style="font-weight: 500;">Adultos</label>
+                                <select class="form-select shadow-none">
 
+                                <option value="1">One</option>
+                                <option value="2">Two</option>
+                                <option value="3">Three</option>
+                                </select>
+                            </div>
+                            <div class="col-lg-2 mb-3">
+                                <label class="form-label" style="font-weight: 500;">Habitaciones</label>
+                                <select class="form-select shadow-none">
+                                <option value="1">One</option>
+                                <option value="2">Two</option>
+                                <option value="3">Three</option>
+                                </select>
+                            </div>
+                            <div class="col-lg-1 mb-lg-3 mt-2">
+                                <button type="submit" class="btn text-white shadow-none custom-bg">Submit</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    
+    </section>
+    
     <section class="section2-reservas">
         <div id="carouselExampleCaptions" class="carousel slide">
             <div class="carousel-indicators">
