--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -49,8 +49,7 @@
     </section>
 
     <section id="section1-contacto">
-        <div class="contactenos">
-        <h1>Contactenos</h1>
+            <h1 class="ubicacion">Contactenos</h1>
         </div>
         <div class="container mt-5 shadow ">
                 <div class="col-md-8 p-5 ">
