--- a/pages/reservas.html
+++ b/pages/reservas.html
@@ -41,12 +41,13 @@
         </a>
     </div>
 
+    </div>
     <section id="reserva">
-        <h1> Reserva tu habitacion</h1>
         <div class="container availability-form">
             <div class="row">
+                <h5 class="col-lg-3">Buscar disponibilidad</h5>
                 <div class="col-lg-12 bg-white shadow p-4 rounded">
-                    <form>
+                    <form class="formulario">
                         <div class="row align-items-end">
                             <div class="col-lg-3 mb-3">
                                 <label class="form-label" style="font-weight: 500;">Check-in</label>
@@ -59,18 +60,19 @@
                             <div class="col-lg-3 mb-3">
                                 <label class="form-label" style="font-weight: 500;">Adultos</label>
                                 <select class="form-select shadow-none">
-
-                                <option value="1">One</option>
-                                <option value="2">Two</option>
-                                <option value="3">Three</option>
+                                <option value="1">1</option>
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                                <option value="3">4</option>
                                 </select>
                             </div>
                             <div class="col-lg-2 mb-3">
                                 <label class="form-label" style="font-weight: 500;">Habitaciones</label>
                                 <select class="form-select shadow-none">
-                                <option value="1">One</option>
-                                <option value="2">Two</option>
-                                <option value="3">Three</option>
+                                <option value="1">1</option>
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                                <option value="3">4</option>
                                 </select>
                             </div>
                             <div class="col-lg-1 mb-lg-3 mt-2">
@@ -81,7 +83,6 @@
                 </div>
             </div>
         </div>
-    
     </section>
     
     <section class="section2-reservas">
