se modifico el estilo de contactenos en la pag de contacto

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -49,8 +49,7 @@
     </section>
 
     <section id="section1-contacto">
-            <h1 class="ubicacion">Contactenos</h1>
-        </div>
+        <h5 class="col-lg-3">Contactenos</h5>
         <div class="container mt-5 shadow ">
                 <div class="col-md-8 p-5 ">
                     <form class="row g-3 contactForm mt-4">
