se modifico la pagina de contacto

--- a/pages/reservas.html
+++ b/pages/reservas.html
@@ -34,12 +34,15 @@
         </nav>
     </header>
     
-    <div class="whatsapp">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-        <a href="https://api.whatsapp.com/send?phone=5195508107&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20Varela%202." class="float" target="_blank">
-        <i class="fa fa-whatsapp my-float"></i>
-        </a>
-    </div>
+    <main>
+        <img class="bannercontacto" src="../images/lacruuuu.jpg" alt="">
+        <div class="whatsapp">
+            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+            <a href="https://api.whatsapp.com/send?phone=5195508107&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20Varela%202." class="float" target="_blank">
+            <i class="fa fa-whatsapp my-float"></i>
+            </a>
+        </div>
+    </main>
 
     </div>
     <section id="reserva">
@@ -54,7 +57,7 @@
                                 <input type="date" class="form-control shadow-none">
                             </div>
                             <div class="col-lg-3 mb-3">
-                                <label class="form-label" style="font-weight: 500;">Check-in</label>
+                                <label class="form-label" style="font-weight: 500;">Check-out</label>
                                 <input type="date" class="form-control shadow-none">
                             </div>
                             <div class="col-lg-3 mb-3">
