--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -35,7 +35,7 @@
     
 
     <main>
-        <img class="bannercontacto" src="../images/lacruuuu.jpg" alt="">
+        <img class="bannercontacto" src="../images/278972662_516663919923630_3006671453821423265_n (1).jpg" alt="" width="700px" height="500">
         <div class="whatsapp">
             <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
             <a href="https://api.whatsapp.com/send?phone=5195508107&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20Varela%202." class="float" target="_blank">
@@ -45,11 +45,10 @@
     </main>
 
     <section id="section1" >
-        <h1 class="titulos">UN ENCLAVE ÚNICO EN PLENO LUJAN DE CUYO</h1>
+        <h1 class="titulos">UN ENCLAVE ÚNICO EN PLENO LUJAN DE CUYO. CONTACTANOS PARA MAS INFORMACION!</h1>
     </section>
 
     <section id="section1-contacto">
-        <h5 class="col-lg-3">Contactenos</h5>
         <div class="container mt-5 shadow ">
                 <div class="col-md-8 p-5 ">
                     <form class="row g-3 contactForm mt-4">
