--- a/index.html
+++ b/index.html
@@ -44,9 +44,8 @@
     </main>
 
     <section id="section1" >
-            <h1 class="titulos">Vivi la montana cerca de la ciudad</h1>
-            <p>La Crucesita es un barrio ecológico, autosustentable, ubicado en el corazón del Piedemonte mendocino, a 1400 m.s.n.m. En un entorno natural único, al pie de las montanas, con un microclima especial, te propone una experiencia anti-estrés, de descanso, bienestar y revitalización. Priorizamos la vida por sobre todas las cosas, es decir al ser humano, a la naturaleza, al universo. Es un lugar para amantes de la naturaleza vivir y disfrutar la montaña a tan sólo 30´ de la ciudad de Mendoza, respetando la flora y fauna autóctona, con casas construidas sólo con piedras de la zona para mantener la estética paisajística y natural del lugar</p>  
-    </section>
+            <h1 class="titulos">Viví la montaña cerca de la ciudad</h1>
+            <p>La Crucesita es un barrio ecológico, autosustentable, ubicado en el corazón del Piedemonte mendocino, a 1400 m.s.n.m. En un entorno natural único, al pie de las montañas, con un microclima especial, te propone una experiencia anti-estrés, de descanso, bienestar y revitalización. Priorizamos la vida por sobre todas las cosas, es decir al ser humano, a la naturaleza, al universo. Es un lugar para amantes de la naturaleza vivir y disfrutar la montaña a tan sólo 30 ́ de la ciudad de Mendoza, respetando la flora y fauna autóctona, con casas construidas sólo con piedras de la zona para mantener la estética paisajística y natural del lugar.             </section>
 
     <section id="articulosi">
             <article class="articuloi">
@@ -56,12 +55,12 @@
 
                 <article class="articuloi">
                     <img class="articuloi-img" src="./images/15379602.jpg" alt="" width="400px" height="250px">
-                    <p class="articuloi-title">Facil acceso a senderos</p>
+                    <p class="articuloi-title">Fácil acceso a senderos</p>
                 </article>
 
                 <article class="articuloi">
                     <img class="articuloi-img" src="./images/cerro.jpeg" alt="" width="400px" height="250px">
-                    <p class="articuloi-title">Conexion con la naturaleza</p>
+                    <p class="articuloi-title">Conexión con la naturaleza</p>
                 </article>
         </section>
 
@@ -76,7 +75,7 @@
                     </figure>
                 </div>
                 <div class="box">
-                    <h2>Links de Interes</h2>
+                    <h2>Links de interés</h2>
                     <ul>
                 <li><a href="./pages/reservas.html">Reservas</a></li>
                 <li><a href="./pages/contacto.html">Contacto</a></li>
