--- a/pages/reservas.html
+++ b/pages/reservas.html
@@ -35,7 +35,6 @@
     </header>
     
     <main>
-        <img class="bannercontacto" src="../images/lacruuuu.jpg" alt="">
         <div class="whatsapp">
             <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
             <a href="https://api.whatsapp.com/send?phone=5195508107&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20Varela%202." class="float" target="_blank">
@@ -79,7 +78,7 @@
                                 </select>
                             </div>
                             <div class="col-lg-1 mb-lg-3 mt-2">
-                                <button type="submit" class="btn text-white shadow-none custom-bg">Submit</button>
+                                <button type="submit" class="boton-reserva">Submit</button>
                             </div>
                         </div>
                     </form>
@@ -99,21 +98,21 @@
                 <div class="carousel-item active">
                 <img src="../images/Two-Bedroom-Villa02-Foto02.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5 class="carrusel-tit">Habitacion Bonarda</h5>
+                    <h5 class="carrusel-tit">Habitación Bonarda</h5>
                     <p class="carrusel-text">Las habitaciones cuentan con 32 mt2 y su belleza natural es la inspiración de esta suite llena de serenidad. Decoran la habitación muebles en tonos cálidos para una estadía confortable y relajante, ideal para disfrutar de su exclusiva e impactante vista a las sierras y su entorno.</p></p>
                 </div>
                 </div>
                 <div class="carousel-item">
                 <img src="../images/Suite-Laguna02-Foto03 (1).jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5 class="carrusel-tit">Habitacion Malbec</h5>
+                    <h5 class="carrusel-tit">Habitación Malbec</h5>
                     <p class="carrusel-text">Las habitaciones cuentan con 32 mt2 y se destacan por contar con un amplio balcón, con mobiliario y hamaca colgante ideal para disfrutar de un atardecer sin igual. Desde su balcón, se divisan una gran variedad de árboles, flores y una vista a la sierra que no podrá olvidar.</p></p>
                 </div>
                 </div>
                 <div class="carousel-item">
                 <img src="../images/1.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5 class="carrusel-tit">Habitacion Uco</h5>
+                    <h5 class="carrusel-tit">Habitación Uco</h5>
                     <p class="carrusel-text">Las habitaciones cuentan con 32 mt2 y ofrecen equipamiento moderno para una estancia relajante. Se destacan por contar con un amplio balcón, con mobiliario y hamaca colgante, con vista a la montana. Un entorno donde la tranquilidad absoluta permite percibir y formar parte de él.</p></p>
                 </div>
             </div>
