modificaciones genrales post devolucion

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -45,7 +45,7 @@
     </main>
 
     <section id="section1" >
-        <h1 class="titulos">UN ENCLAVE ÚNICO EN PLENO LUJAN DE CUYO. CONTACTANOS PARA MAS INFORMACION!</h1>
+        <h1 class="titulos">UN ENCLAVE ÚNICO EN PLENO LUJÁN DE CUYO. ¡CONTACTANOS PARA MAS INFORMACIÓN!</h1>
     </section>
 
     <section id="section1-contacto">
@@ -75,7 +75,7 @@
 
     <section id="map">
         <div class="grupo-map">
-            <h1 class="ubicacion">Ubicacion</h1>
+            <h1 class="ubicacion">Ubicación</h1>
                 <figure>
                     <a>
                         <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d107071.16768785407!2d-69.17743635664061!3d-33.00446119999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x967de774fb671aab%3A0x459fe8262e5dab8d!2sLa%20Crucecita%20Horseback%20Riding!5e0!3m2!1ses!2sus!4v1686000599994!5m2!1ses!2sus" width="1200" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -104,7 +104,7 @@
                     </figure>
                 </div>
                 <div class="box">
-                    <h2>Links de Interes</h2>
+                    <h2>Links de interés</h2>
                     <ul>
                 <li><a href="../pages/reservas.html">Reservas</a></li>
                 <li><a href="../pages/contacto.html">Contacto</a></li>
