--- a/pages/experiencias.html
+++ b/pages/experiencias.html
@@ -45,7 +45,7 @@
     </main>
         
     <section id="section1-exp" >
-        <h1 class="titulos">La experiencia de estar en un lugar unico</h1>
+        <h1 class="titulos">La experiencia de estar en un lugar único</h1>
     </section>
     
     <section id="articulos">
@@ -103,7 +103,7 @@
                 </figure>
             </div>
             <div class="box">
-                <h2>Links de Interes</h2>
+                <h2>Links de interés</h2>
                 <ul>
             <li><a href="../pages/reservas.html">Reservas</a></li>
             <li><a href="../pages/contacto.html">Contacto</a></li>
