--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -89,7 +89,7 @@
                     </figure>
                 </div>
                 <div class="box">
-                    <h2>Links de Interes</h2>
+                    <h2>Links de interés</h2>
                     <ul>
                 <li><a href="../pages/reservas.html">Reservas</a></li>
                 <li><a href="../pages/contacto.html">Contacto</a></li>
