--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="alojamiento, hotel, mendoza, turismo, cordillera de los andes, tarifas, destinos, reservas online, ubicacion favorable, actividades divertidas, viaje, argentina, comodidas, experiencia de viaje, servicio al viajero ">
+    <meta name="description" content="LA MÁXIMA EXPERIENCIA DEL MUNDO del vino desde Lujan de Cuyo, Mendoza, Argentina.Disfruta de una escapada inolvidable en nuestro acogedor hotel en la Cordillera. Rodeado de impresionantes vistas panorámicas, ofrecemos comodidad y relajación en un entorno natural único. ¡Reserva ahora y sumérgete en la belleza de la montaña!">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Inicio">
+    <meta property="og:url" content="https://fermirante.github.io/preentrega2/">
+    <meta property="og:img" content="https://fermirante.github.io/preentrega2/images/lacruce.png">
+    <meta property="og:description" content="LA MÁXIMA EXPERIENCIA DEL MUNDO del vino desde Lujan de Cuyo, Mendoza, Argentina.Disfruta de una escapada inolvidable en nuestro acogedor hotel en la Cordillera. Rodeado de impresionantes vistas panorámicas, ofrecemos comodidad y relajación en un entorno natural único. ¡Reserva ahora y sumérgete en la belleza de la montaña!">
     <title>Inicio</title>
     <link rel="shortcut icon" href="./images/lacruce.png">
     <link rel="stylesheet" href="./css/bootstrap.min.css">
