--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="contacto hotel, reservas, información de contacto, correo electrónico, teléfono, formulario de contacto, ubicación, atención al cliente, respuesta, dudas, interes por alojamiento">
+    <meta name="description" content="¡Contáctanos para reservar tu estancia en nuestro lujoso hotel! Estamos listos para brindarte un servicio excepcional y hacer que tus vacaciones sean inolvidables. Encuentra nuestras opciones de contacto y no dudes en llamarnos o enviarnos un correo electrónico. ¡Esperamos darte la bienvenida pronto!">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Contacto">
+    <meta property="og:url" content="https://fermirante.github.io/preentrega2/">
+    <meta property="og:img" content="https://fermirante.github.io/preentrega2/images/lacruce.png">
+    <meta property="og:description" content="¡Contáctanos para reservar tu estancia en nuestro lujoso hotel! Estamos listos para brindarte un servicio excepcional y hacer que tus vacaciones sean inolvidables. Encuentra nuestras opciones de contacto y no dudes en llamarnos o enviarnos un correo electrónico. ¡Esperamos darte la bienvenida pronto!">
     <title>Contacto</title>
     <link rel="shortcut icon" href="../images/lacruce.png">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
