--- a/pages/experiencias.html
+++ b/pages/experiencias.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Paisajes, senderismo, almuerzo en vinedos, aventira, experiencias inolvidables, entorno natural, montama, aire fresco, vistas expectaculares, descanso en la montana, interes por alojamiento">
+    <meta name="description" content="Descubre la combinación perfecta de aventura y relajación en Hotel Montaña. Disfruta de una emocionante cabalgata por pintorescos senderos seguida de una degustación de vinos exquisitos. Nuestra experiencia 'Cabalgata y Vino' te brindará momentos inolvidables en un entorno natural único. ¡Reserva ahora y vive una jornada que estimulará tus sentidos y te conectará con la belleza del entorno! ">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Experiencias">
+    <meta property="og:url" content="https://fermirante.github.io/preentrega2/">
+    <meta property="og:img" content="https://fermirante.github.io/preentrega2/images/lacruce.png">
+    <meta property="og:description" content="Descubre la combinación perfecta de aventura y relajación en Hotel Montaña. Disfruta de una emocionante cabalgata por pintorescos senderos seguida de una degustación de vinos exquisitos. Nuestra experiencia 'Cabalgata y Vino' te brindará momentos inolvidables en un entorno natural único. ¡Reserva ahora y vive una jornada que estimulará tus sentidos y te conectará con la belleza del entorno!">
     <title>Experiencias</title>
     <link rel="shortcut icon" href="../images/lacruce.png">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
