--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
     <script src="https://kit.fontawesome.com/c8a9350c8e.js" crossorigin="anonymous"></script>
+    <meta name="keywords" content="Paisajes, senderismo, almuerzo en vinedos, aventura, galería de fotos, imágenes de hotel, entorno natural, habitaciones, vistas panorámicas, instalaciones, comodidades, paisajes, montaña, refugio, experiencias, escapada">
+    <meta name="description" content="Explora la encantadora galería de fotos del Hotel Montaña. Descubre la belleza de nuestro entorno natural, las acogedoras habitaciones, las impresionantes vistas panorámicas y las instalaciones de primera clase. Sumérgete en una experiencia visual que captura la esencia de nuestro refugio en la montaña. ¡Ven y contempla lo que te espera en tu próxima escapada!">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Galeria">
+    <meta property="og:url" content="https://fermirante.github.io/preentrega2/">
+    <meta property="og:img" content="https://fermirante.github.io/preentrega2/images/lacruce.png">
+    <meta property="og:description" content="Explora la encantadora galería de fotos del Hotel Montaña. Descubre la belleza de nuestro entorno natural, las acogedoras habitaciones, las impresionantes vistas panorámicas y las instalaciones de primera clase. Sumérgete en una experiencia visual que captura la esencia de nuestro refugio en la montaña. ¡Ven y contempla lo que te espera en tu próxima escapada!">
     <title>Galeria</title>
     <link rel="shortcut icon" href="../images/lacruce.png">
 </head>
