--- a/pages/reservas.html
+++ b/pages/reservas.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="reservas de hotel, habitaciones disponibles, reservación en línea, tarifas de hospedaje, confirmar reserva, disponibilidad, proceso de reserva, habitacion doble, habitacion single, hotel lujo, fechas de estancia, interes por alojamiento">
+    <meta name="description" content="Reserva tu escapada perfecta en Hotel Montaña. Explora nuestras cómodas habitaciones, elige entre una variedad de tarifas de hospedaje y confirma tu reserva en línea de manera sencilla. ¡Asegura tu estancia en nuestro acogedor refugio en la naturaleza y crea recuerdos inolvidables en un entorno pintoresco y tranquilo!">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Reservas">
+    <meta property="og:url" content="https://fermirante.github.io/preentrega2/">
+    <meta property="og:img" content="https://fermirante.github.io/preentrega2/images/lacruce.png">
+    <meta property="og:description" content="Reserva tu escapada perfecta en Hotel Montaña. Explora nuestras cómodas habitaciones, elige entre una variedad de tarifas de hospedaje y confirma tu reserva en línea de manera sencilla. ¡Asegura tu estancia en nuestro acogedor refugio en la naturaleza y crea recuerdos inolvidables en un entorno pintoresco y tranquilo!">
     <title>Reservas</title>
     <link rel="shortcut icon" href="../images/lacruce.png">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
