--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -57,7 +57,7 @@
     <section id="galeria">
         <article class="art-galeria">
             <img class="art__img" src="../images/1.jpg" alt="" width="300px" height="250px">
-            <img class="art__img" src="../images/1.webp" alt="" width="300px" height="250px">
+            <img class="art__img" src="../images/5.jpg" alt="" width="300px" height="250px">
             <img class="art__img" src="../images/10.jpeg" alt="" width="300px" height="250px">
             <img class="art__img" src="../images/11.jpeg" alt="" width="300px" height="250px">
             <img class="art__img" src="../images/12.jpg" alt="" width="300px" height="250px">
