--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -42,7 +42,7 @@
     
 
     <main>
-        <img class="bannercontacto" src="../images/278972662_516663919923630_3006671453821423265_n (1).jpg" alt="" width="700px" height="500">
+        <img class="bannercontacto" src="../images/278972662_516663919923630_3006671453821423265_n.jpg" alt="" width="700px" height="500">
         <div class="whatsapp">
             <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
             <a href="https://api.whatsapp.com/send?phone=5195508107&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20Varela%202." class="float" target="_blank">
