--- a/pages/reservas.html
+++ b/pages/reservas.html
@@ -105,7 +105,7 @@
                 </div>
                 </div>
                 <div class="carousel-item">
-                <img src="../images/Suite-Laguna02-Foto03 (1).jpg" class="d-block w-100" alt="...">
+                <img src="../images/Suite-Laguna02-Foto03.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h5 class="carrusel-tit">Habitación Malbec</h5>
                     <p class="carrusel-text">Las habitaciones cuentan con 32 mt2 y se destacan por contar con un amplio balcón, con mobiliario y hamaca colgante ideal para disfrutar de un atardecer sin igual. Desde su balcón, se divisan una gran variedad de árboles, flores y una vista a la sierra que no podrá olvidar.</p></p>
